--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,49 @@
-# Compiled class file
-*.class
+# Ignore IntelliJ IDEA project-specific files
+.idea/
+*.iml
+*.ipr
+*.iws
 
-# Log file
+# Ignore build output directories
+/out/
+target/
+build/
+
+# Ignore Maven wrapper files
+.mvn/
+mvnw
+mvnw.cmd
+
+# Ignore Gradle wrapper files
+.gradle/
+gradle-wrapper.jar
+
+# Ignore log files
 *.log
 
-# BlueJ files
-*.ctxt
+# Ignore temporary files
+*.swp
+*.swo
+*~
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Ignore OS-specific files
+.DS_Store
+Thumbs.db
+desktop.ini
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Ignore other IDE-specific files
+.vscode/
+*.workspace
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-./idea
+# Ignore Java dependencies
+*.class
+
+# Ignore coverage results
+jacoco.exec
+
+# Ignore testing reports
+/test-results/
+*.xml
+
+# Ignore configuration and environment files
+.env
