--- a/S303-EscapeRoom/pom.xml
+++ b/S303-EscapeRoom/pom.xml
@@ -30,6 +30,13 @@
             <artifactId>log4j-api</artifactId>
             <version>2.17.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.23.1</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
